--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Babel                             2.11.0
-matplotlib                        3.8.4
-matplotlib-inline                 0.1.6
-pandas                            2.2.2
-seaborn                           0.13.2
-streamlit                         1.32.0
+Babel==2.11.0
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+pandas==2.2.2
+seaborn==0.13.2
+streamlit==1.32.0
